--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,55 @@
-.App {
+.App{
+  background-image: url("https://cdn.pixabay.com/photo/2016/11/19/14/00/code-1839406_960_720.jpg");
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  min-height: 600px;
+  background-repeat: no-repeat;
+  opacity: 0.87;
+  position: absolute;
+  margin: 0 auto;
+}
+
+.middle__title{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  vertical-align: middle;
+  width: 100%;
+  top: 0;
+  left: 0;
   color: white;
+  font-size: 50px;
 }
 
-.App-link {
-  color: #09d3ac;
+.middle__title .content{
+  display: inline-block;
+}
+
+.middle__title .blank{
+  display: inline-block;
+  width: 0;
+  height: 300px;
+  vertical-align: middle;
+}
+
+.top__title{
+  padding: 20px;
+  color: white;
+  font-size: 30px;
+  text-align: left;
+}
+
+.content__container{
+  width: 960px;
+  margin: 50px auto;
+}
+
+.content__box{
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  float: left;
+  margin: 10px;
+
+  
 }
